force-app/main/default/objects/Care_Need__c/Care_Need__c.object-meta.xml
<CustomObject>
    <description>A caregiver (Seeker)'s request for care support. Drives the MatchProviders engine.</description>
    <label>Care Need</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Care Need Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Needs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>