force-app/main/default/objects/Care_Need__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <label>Care Type</label>
    <required>true</required>
    <type>Picklist</type>
    <description>Must-match gate input for matching.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Eldercare</fullName><default>false</default><label>Eldercare</label></value>
            <value><fullName>Childcare</fullName><default>false</default><label>Childcare</label></value>
            <value><fullName>Respite</fullName><default>false</default><label>Respite</label></value>
            <value><fullName>Transport</fullName><default>false</default><label>Transport</label></value>
            <value><fullName>Meals</fullName><default>false</default><label>Meals</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>