force-app/main/default/objects/Care_Need__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <type>Location</type>
    <scale>7</scale>
    <description>Lat/Long; enables distance calc when populated.</description>
</CustomField>