force-app/main/default/objects/Care_Need__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Free-form context from the conversation.</description>
</CustomField>