force-app/main/default/objects/Care_Need__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
    <description>Optional finer-grained location.</description>
</CustomField>