force-app/main/default/objects/Care_Need__c/fields/Requested_Day__c.field-meta.xml
<CustomField>
    <fullName>Requested_Day__c</fullName>
    <label>Requested Day</label>
    <type>MultiselectPicklist</type>
    <description>Structured day(s) for availability-overlap scoring.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Mon</fullName><default>false</default><label>Mon</label></value>
            <value><fullName>Tue</fullName><default>false</default><label>Tue</label></value>
            <value><fullName>Wed</fullName><default>false</default><label>Wed</label></value>
            <value><fullName>Thu</fullName><default>false</default><label>Thu</label></value>
            <value><fullName>Fri</fullName><default>false</default><label>Fri</label></value>
            <value><fullName>Sat</fullName><default>false</default><label>Sat</label></value>
            <value><fullName>Sun</fullName><default>false</default><label>Sun</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>