force-app/main/default/objects/Care_Need__c/fields/Requested_Time_Block__c.field-meta.xml
<CustomField>
    <fullName>Requested_Time_Block__c</fullName>
    <label>Requested Time Block</label>
    <type>MultiselectPicklist</type>
    <description>Structured time block(s) for availability-overlap scoring.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Morning</fullName><default>false</default><label>Morning</label></value>
            <value><fullName>Afternoon</fullName><default>false</default><label>Afternoon</label></value>
            <value><fullName>Evening</fullName><default>false</default><label>Evening</label></value>
            <value><fullName>Overnight</fullName><default>false</default><label>Overnight</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>