force-app/main/default/objects/Care_Need__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <length>255</length>
    <type>Text</type>
    <description>Free text capture of requested time(s); human-readable schedule summary.</description>
</CustomField>