force-app/main/default/objects/Care_Need__c/fields/Seeker__c.field-meta.xml
<CustomField>
    <fullName>Seeker__c</fullName>
    <label>Seeker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Care Needs</relationshipLabel>
    <relationshipName>Care_Needs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The caregiver making the request.</description>
</CustomField>