force-app/main/default/objects/Care_Need__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <required>true</required>
    <type>Picklist</type>
    <description>Prioritization; Crisis triggers guardrail review.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>true</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Crisis</fullName><default>false</default><label>Crisis</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>